--- a/deploy.yml
+++ b/deploy.yml
@@ -1,1 +1,79 @@
-
+apiVersion: apps/v1beta1
+kind: Deployment
+metadata:
+  name: {{ instance_name }}-miracle-frontend
+  labels:
+    app: {{ instance_name }}-miracle-frontend
+spec:
+  selector:
+    matchLabels:
+      app: {{ instance_name }}-miracle-frontend
+  template:
+    metadata:
+      name: {{ instance_name }}-miracle-frontend
+      labels:
+        app: {{ instance_name }}-miracle-frontend
+    spec:
+      containers:
+      - name: {{ instance_name }}-miracle-frontend
+        image: {{ miracle-frontend.image }}
+        ports:
+        - containerPort: 80 # 容器端口
+        resources:
+          limits:
+            cpu: "1" # cpu 限制
+            memory: "1000Mi" # 内存限制
+          requests:
+            cpu: "1" # cpu 预留（与限制值一致）
+            memory: "1000Mi" # 内存预留（与限制值一致）
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ instance_name }}-miracle-frontend
+spec:
+  type: NodePort
+  ports:
+  - port: 80 # 服务端口
+  selector:
+    app: {{ instance_name }}-miracle-frontend
+---
+apiVersion: apps/v1beta1
+kind: Deployment
+metadata:
+  name: {{ instance_name }}-miracle-service
+  labels:
+    app: {{ instance_name }}-miracle-service
+spec:
+  selector:
+    matchLabels:
+      app: {{ instance_name }}-miracle-service
+  template:
+    metadata:
+      name: {{ instance_name }}-miracle-service
+      labels:
+        app: {{ instance_name }}-miracle-service
+    spec:
+      containers:
+      - name: {{ instance_name }}-miracle-service
+        image: {{ miracle-service.image }}
+        ports:
+        - containerPort: 80 # 容器端口
+        resources:
+          limits:
+            cpu: "1" # cpu 限制
+            memory: "1000Mi" # 内存限制
+          requests:
+            cpu: "1" # cpu 预留（与限制值一致）
+            memory: "1000Mi" # 内存预留（与限制值一致）
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ instance_name }}-miracle-service
+spec:
+  type: NodePort
+  ports:
+  - port: 80 # 服务端口
+  selector:
+    app: {{ instance_name }}-miracle-service
