--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,46 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
+  name: {{ instance_name }}-2048
+  labels:
+    app: {{ instance_name }}-2048
+spec:
+  selector:
+    matchLabels:
+      app: {{ instance_name }}-2048
+  template:
+    metadata:
+      name: {{ instance_name }}-2048
+      labels:
+        app: {{ instance_name }}-2048
+    spec:
+      containers:
+      - name: {{ instance_name }}-2048
+        image: {{ 2048.image }}
+        ports:
+        - containerPort: 80 # 容器端口
+        resources:
+          limits:
+            cpu: "1" # cpu 限制
+            memory: "1000Mi" # 内存限制
+          requests:
+            cpu: "1" # cpu 预留（与限制值一致）
+            memory: "1000Mi" # 内存预留（与限制值一致）
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ instance_name }}-2048
+spec:
+  type: NodePort
+  ports:
+  - port: 80 # 服务端口
+  selector:
+    app: {{ instance_name }}-2048
+---
+apiVersion: apps/v1beta1
+kind: Deployment
+metadata:
   name: {{ instance_name }}-miracle-frontend
   labels:
     app: {{ instance_name }}-miracle-frontend
